kubernetes/preprod/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: preprod
    app: multibranch-pipeline-demo-ms
    layer: frontend
  name: preprod-multibranch-pipeline-demo-service
  namespace: preprod
spec:
  type: NodePort
  selector:
    app: multibranch-pipeline-demo-ms
  ports:
    - name: api
      port: 8080
      targetPort: 8080
