kubernetes/preprod/00-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preprod-multibranch-pipeline-demo-ingress
  namespace: preprod
  labels:
    env: preprod
    app: multibranch-pipeline-demo-ms
    layer: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: preprod-multibranch-pipeline-demo.catalysttechnologies.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: preprod-multibranch-pipeline-demo-service
                port:
                  number: 8080
